// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`createDbWorker initializes correctly 1`] = `
[
  {
    "appOwner": {
      "encryptionKey": Uint8Array [
        173,
        165,
        204,
        225,
        74,
        240,
        76,
        99,
        46,
        18,
        104,
        4,
        0,
        136,
        188,
        132,
        99,
        57,
        151,
        4,
        147,
        44,
        59,
        91,
        61,
        162,
        116,
        243,
        186,
        98,
        25,
        4,
      ],
      "id": "MdVYFAxShUluuZKVWQfYL",
      "mnemonic": "knee easy fork attitude drink gloom head latin spider grab spy reason",
      "type": "AppOwner",
      "writeKey": Uint8Array [
        111,
        64,
        118,
        108,
        245,
        65,
        176,
        98,
        173,
        247,
        85,
        78,
        30,
        167,
        192,
        203,
      ],
    },
    "type": "onInit",
  },
]
`;

exports[`createDbWorker initializes correctly 2`] = `
{
  "schema": {
    "indexes": [
      {
        "name": "evolu_history_ownerId_timestamp",
        "sql": "create index evolu_history_ownerId_timestamp on evolu_history (
          "ownerId",
          "timestamp"
        )",
      },
      {
        "name": "evolu_history_ownerId_table_id_column_timestampDesc",
        "sql": "create unique index evolu_history_ownerId_table_id_column_timestampDesc on evolu_history (
          "ownerId",
          "table",
          "id",
          "column",
          "timestamp" desc
        )",
      },
      {
        "name": "evolu_timestamp_index",
        "sql": "create index evolu_timestamp_index on evolu_timestamp (
        "ownerId",
        "l",
        "t",
        "h1",
        "h2",
        "c"
      )",
      },
    ],
    "tables": [
      {
        "columns": [
          "protocolVersion",
        ],
        "name": "evolu_version",
      },
      {
        "columns": [
          "clock",
          "appOwnerId",
          "appOwnerEncryptionKey",
          "appOwnerWriteKey",
          "appOwnerMnemonic",
        ],
        "name": "evolu_config",
      },
      {
        "columns": [
          "ownerId",
          "table",
          "id",
          "column",
          "timestamp",
          "value",
        ],
        "name": "evolu_history",
      },
      {
        "columns": [
          "id",
          "name",
          "createdAt",
          "updatedAt",
          "isDeleted",
        ],
        "name": "testTable",
      },
      {
        "columns": [
          "id",
          "name",
          "createdAt",
          "updatedAt",
          "isDeleted",
        ],
        "name": "_testTable",
      },
      {
        "columns": [
          "ownerId",
          "t",
          "h1",
          "h2",
          "c",
          "l",
        ],
        "name": "evolu_timestamp",
      },
    ],
  },
  "tables": [
    {
      "name": "evolu_version",
      "rows": [
        {
          "protocolVersion": 0,
        },
      ],
    },
    {
      "name": "evolu_config",
      "rows": [
        {
          "appOwnerEncryptionKey": {
            "data": [
              173,
              165,
              204,
              225,
              74,
              240,
              76,
              99,
              46,
              18,
              104,
              4,
              0,
              136,
              188,
              132,
              99,
              57,
              151,
              4,
              147,
              44,
              59,
              91,
              61,
              162,
              116,
              243,
              186,
              98,
              25,
              4,
            ],
            "type": "Buffer",
          },
          "appOwnerId": "MdVYFAxShUluuZKVWQfYL",
          "appOwnerMnemonic": "knee easy fork attitude drink gloom head latin spider grab spy reason",
          "appOwnerWriteKey": {
            "data": [
              111,
              64,
              118,
              108,
              245,
              65,
              176,
              98,
              173,
              247,
              85,
              78,
              30,
              167,
              192,
              203,
            ],
            "type": "Buffer",
          },
          "clock": "1970-01-01T00:00:00.000Z-0000-40aaf4d24f2982ba",
        },
      ],
    },
    {
      "name": "evolu_history",
      "rows": [],
    },
    {
      "name": "testTable",
      "rows": [],
    },
    {
      "name": "_testTable",
      "rows": [],
    },
    {
      "name": "evolu_timestamp",
      "rows": [],
    },
  ],
}
`;

exports[`local mutation 1`] = `
[
  {
    "appOwner": {
      "encryptionKey": Uint8Array [
        173,
        165,
        204,
        225,
        74,
        240,
        76,
        99,
        46,
        18,
        104,
        4,
        0,
        136,
        188,
        132,
        99,
        57,
        151,
        4,
        147,
        44,
        59,
        91,
        61,
        162,
        116,
        243,
        186,
        98,
        25,
        4,
      ],
      "id": "MdVYFAxShUluuZKVWQfYL",
      "mnemonic": "knee easy fork attitude drink gloom head latin spider grab spy reason",
      "type": "AppOwner",
      "writeKey": Uint8Array [
        111,
        64,
        118,
        108,
        245,
        65,
        176,
        98,
        173,
        247,
        85,
        78,
        30,
        167,
        192,
        203,
      ],
    },
    "type": "onInit",
  },
  {
    "onCompleteIds": [],
    "patches": [],
    "tabId": "c3jir3c4AAUWg7IbJo2Xp",
    "type": "onChange",
  },
  {
    "tabId": "c3jir3c4AAUWg7IbJo2Xp",
    "type": "onReceive",
  },
]
`;

exports[`local mutation 2`] = `
[
  {
    "name": "evolu_version",
    "rows": [
      {
        "protocolVersion": 0,
      },
    ],
  },
  {
    "name": "evolu_config",
    "rows": [
      {
        "appOwnerEncryptionKey": {
          "data": [
            173,
            165,
            204,
            225,
            74,
            240,
            76,
            99,
            46,
            18,
            104,
            4,
            0,
            136,
            188,
            132,
            99,
            57,
            151,
            4,
            147,
            44,
            59,
            91,
            61,
            162,
            116,
            243,
            186,
            98,
            25,
            4,
          ],
          "type": "Buffer",
        },
        "appOwnerId": "MdVYFAxShUluuZKVWQfYL",
        "appOwnerMnemonic": "knee easy fork attitude drink gloom head latin spider grab spy reason",
        "appOwnerWriteKey": {
          "data": [
            111,
            64,
            118,
            108,
            245,
            65,
            176,
            98,
            173,
            247,
            85,
            78,
            30,
            167,
            192,
            203,
          ],
          "type": "Buffer",
        },
        "clock": "1970-01-01T00:00:00.000Z-0000-7cd5aa540db883b2",
      },
    ],
  },
  {
    "name": "evolu_history",
    "rows": [],
  },
  {
    "name": "testTable",
    "rows": [],
  },
  {
    "name": "_testTable",
    "rows": [
      {
        "createdAt": "1970-01-01T00:00:00.002Z",
        "id": "gFeyTa9pE7z9KY-wzYDMk",
        "isDeleted": null,
        "name": "test",
        "updatedAt": "1970-01-01T00:00:00.002Z",
      },
    ],
  },
  {
    "name": "evolu_timestamp",
    "rows": [],
  },
]
`;

exports[`local mutation 3`] = `
[
  {
    "name": "evolu_version",
    "rows": [
      {
        "protocolVersion": 0,
      },
    ],
  },
  {
    "name": "evolu_config",
    "rows": [
      {
        "appOwnerEncryptionKey": {
          "data": [
            173,
            165,
            204,
            225,
            74,
            240,
            76,
            99,
            46,
            18,
            104,
            4,
            0,
            136,
            188,
            132,
            99,
            57,
            151,
            4,
            147,
            44,
            59,
            91,
            61,
            162,
            116,
            243,
            186,
            98,
            25,
            4,
          ],
          "type": "Buffer",
        },
        "appOwnerId": "MdVYFAxShUluuZKVWQfYL",
        "appOwnerMnemonic": "knee easy fork attitude drink gloom head latin spider grab spy reason",
        "appOwnerWriteKey": {
          "data": [
            111,
            64,
            118,
            108,
            245,
            65,
            176,
            98,
            173,
            247,
            85,
            78,
            30,
            167,
            192,
            203,
          ],
          "type": "Buffer",
        },
        "clock": "1970-01-01T00:00:00.000Z-0000-7cd5aa540db883b2",
      },
    ],
  },
  {
    "name": "evolu_history",
    "rows": [],
  },
  {
    "name": "testTable",
    "rows": [],
  },
  {
    "name": "_testTable",
    "rows": [],
  },
  {
    "name": "evolu_timestamp",
    "rows": [],
  },
]
`;

exports[`mutate before init 1`] = `
[
  {
    "appOwner": {
      "encryptionKey": Uint8Array [
        173,
        165,
        204,
        225,
        74,
        240,
        76,
        99,
        46,
        18,
        104,
        4,
        0,
        136,
        188,
        132,
        99,
        57,
        151,
        4,
        147,
        44,
        59,
        91,
        61,
        162,
        116,
        243,
        186,
        98,
        25,
        4,
      ],
      "id": "MdVYFAxShUluuZKVWQfYL",
      "mnemonic": "knee easy fork attitude drink gloom head latin spider grab spy reason",
      "type": "AppOwner",
      "writeKey": Uint8Array [
        111,
        64,
        118,
        108,
        245,
        65,
        176,
        98,
        173,
        247,
        85,
        78,
        30,
        167,
        192,
        203,
      ],
    },
    "type": "onInit",
  },
  {
    "onCompleteIds": [],
    "patches": [],
    "tabId": "Df11mF2BAPRJEKIftYOy3",
    "type": "onChange",
  },
  {
    "tabId": "Df11mF2BAPRJEKIftYOy3",
    "type": "onReceive",
  },
]
`;

exports[`mutate before init 2`] = `
[
  {
    "name": "evolu_version",
    "rows": [
      {
        "protocolVersion": 0,
      },
    ],
  },
  {
    "name": "evolu_config",
    "rows": [
      {
        "appOwnerEncryptionKey": {
          "data": [
            173,
            165,
            204,
            225,
            74,
            240,
            76,
            99,
            46,
            18,
            104,
            4,
            0,
            136,
            188,
            132,
            99,
            57,
            151,
            4,
            147,
            44,
            59,
            91,
            61,
            162,
            116,
            243,
            186,
            98,
            25,
            4,
          ],
          "type": "Buffer",
        },
        "appOwnerId": "MdVYFAxShUluuZKVWQfYL",
        "appOwnerMnemonic": "knee easy fork attitude drink gloom head latin spider grab spy reason",
        "appOwnerWriteKey": {
          "data": [
            111,
            64,
            118,
            108,
            245,
            65,
            176,
            98,
            173,
            247,
            85,
            78,
            30,
            167,
            192,
            203,
          ],
          "type": "Buffer",
        },
        "clock": "1970-01-01T00:00:00.000Z-0000-41123f05b8442d71",
      },
    ],
  },
  {
    "name": "evolu_history",
    "rows": [],
  },
  {
    "name": "testTable",
    "rows": [],
  },
  {
    "name": "_testTable",
    "rows": [
      {
        "createdAt": "1970-01-01T00:00:00.001Z",
        "id": "ms4ropUP_dGi2jCaTw-bM",
        "isDeleted": null,
        "name": "test",
        "updatedAt": "1970-01-01T00:00:00.001Z",
      },
    ],
  },
  {
    "name": "evolu_timestamp",
    "rows": [],
  },
]
`;

exports[`mutations 1`] = `
[
  {
    "appOwner": {
      "encryptionKey": Uint8Array [
        173,
        165,
        204,
        225,
        74,
        240,
        76,
        99,
        46,
        18,
        104,
        4,
        0,
        136,
        188,
        132,
        99,
        57,
        151,
        4,
        147,
        44,
        59,
        91,
        61,
        162,
        116,
        243,
        186,
        98,
        25,
        4,
      ],
      "id": "MdVYFAxShUluuZKVWQfYL",
      "mnemonic": "knee easy fork attitude drink gloom head latin spider grab spy reason",
      "type": "AppOwner",
      "writeKey": Uint8Array [
        111,
        64,
        118,
        108,
        245,
        65,
        176,
        98,
        173,
        247,
        85,
        78,
        30,
        167,
        192,
        203,
      ],
    },
    "type": "onInit",
  },
  {
    "onCompleteIds": [],
    "patches": [],
    "tabId": "v62hCHsxOuqK4AbttUxKh",
    "type": "onChange",
  },
  {
    "tabId": "v62hCHsxOuqK4AbttUxKh",
    "type": "onReceive",
  },
]
`;

exports[`mutations 2`] = `
[
  {
    "name": "evolu_version",
    "rows": [
      {
        "protocolVersion": 0,
      },
    ],
  },
  {
    "name": "evolu_config",
    "rows": [
      {
        "appOwnerEncryptionKey": {
          "data": [
            173,
            165,
            204,
            225,
            74,
            240,
            76,
            99,
            46,
            18,
            104,
            4,
            0,
            136,
            188,
            132,
            99,
            57,
            151,
            4,
            147,
            44,
            59,
            91,
            61,
            162,
            116,
            243,
            186,
            98,
            25,
            4,
          ],
          "type": "Buffer",
        },
        "appOwnerId": "MdVYFAxShUluuZKVWQfYL",
        "appOwnerMnemonic": "knee easy fork attitude drink gloom head latin spider grab spy reason",
        "appOwnerWriteKey": {
          "data": [
            111,
            64,
            118,
            108,
            245,
            65,
            176,
            98,
            173,
            247,
            85,
            78,
            30,
            167,
            192,
            203,
          ],
          "type": "Buffer",
        },
        "clock": "1970-01-01T00:00:00.000Z-0001-a8d0151b0fb0b791",
      },
    ],
  },
  {
    "name": "evolu_history",
    "rows": [
      {
        "column": "name",
        "id": {
          "data": [
            222,
            71,
            117,
            30,
            223,
            109,
            157,
            93,
            143,
            80,
            64,
            84,
            254,
            164,
            40,
            176,
          ],
          "type": "Buffer",
        },
        "ownerId": {
          "data": [
            128,
            87,
            31,
            173,
            149,
            230,
            206,
            93,
            128,
            2,
            246,
            220,
            162,
            236,
            95,
            168,
          ],
          "type": "Buffer",
        },
        "table": "testTable",
        "timestamp": {
          "data": [
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            1,
            168,
            208,
            21,
            27,
            15,
            176,
            183,
            145,
          ],
          "type": "Buffer",
        },
        "value": "test",
      },
    ],
  },
  {
    "name": "testTable",
    "rows": [
      {
        "createdAt": null,
        "id": "qBEkmGiGH5l37ns7tL4W_",
        "isDeleted": null,
        "name": "test",
        "updatedAt": "1970-01-01T00:00:00.000Z",
      },
    ],
  },
  {
    "name": "_testTable",
    "rows": [],
  },
  {
    "name": "evolu_timestamp",
    "rows": [
      {
        "c": 1,
        "h1": 255490510088691,
        "h2": 18088005276510,
        "l": 2,
        "ownerId": {
          "data": [
            128,
            87,
            31,
            173,
            149,
            230,
            206,
            93,
            128,
            2,
            246,
            220,
            162,
            236,
            95,
            168,
          ],
          "type": "Buffer",
        },
        "t": {
          "data": [
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            1,
            168,
            208,
            21,
            27,
            15,
            176,
            183,
            145,
          ],
          "type": "Buffer",
        },
      },
    ],
  },
]
`;

exports[`reset 1`] = `
{
  "schema": {
    "indexes": [],
    "tables": [],
  },
  "tables": [],
}
`;
